[tool.poetry]
name = "shiny-tutorials"
version = "0.1.0"
description = ""
authors = ["masami <pea98258@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
shiny = "^0.9.0"
faicons = "^0.2.2"
shinywidgets = "^0.3.2"
plotly = "^5.22.0"
pandas = "^2.2.2"
ridgeplot = "^0.1.25"
seaborn = "^0.13.2"
ipyleaflet = "^0.19.0"
geopy = "^2.4.1"
requests = "^2.32.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
